--- a/style.css
+++ b/style.css
@@ -183,24 +183,24 @@ footer{
 
 
 
+.parallaxWrapper{
+    height: 450px;
+    background-color: #333;
+    overflow: hidden;
+    /* display: flex;
+    align-items: center; */
+    position: relative;
+}
 
+.parallaxWrapper > img{
+    width: 100%;
+    position: absolute;
+}
 
-/* font size */
-.fs12{font-size: 12px;}
-.fs13{font-size: 13px;}
-.fs14{font-size: 14px;}
-.fs16{font-size: 16px;}
-.fs18{font-size: 18px;}
-.fs23{font-size: 23px;}
-
-/* font weight */
-.fw400{font-weight:400}
-.fw600{font-weight:600}
-.fw700{font-weight:700}
-
-/* line height */
-.lh0{line-height: 0px;}
-.lh17{line-height: 17px;}
-.lh18{line-height: 18px;}
-.lh20{line-height: 20px;}
-.lh28{line-height: 28px;}
+.parallaxWrapper > div{
+    /* background-color: red; */
+    z-index: 1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
