--- a/style.css
+++ b/style.css
@@ -203,4 +203,14 @@ footer{
     position: absolute;
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: brightness(70%);
+}
+
+.parallaxWrapper h3{
+    font-family: Helvetica, sans-serif;
+    color: white;
+    font-size: 40px;
 }
