--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,8 @@ footer{
 
 
 .parallaxWrapper{
-    height: min(40vh, 450px);
+    height: min(50vw, 450px);
+    min-height: 300px;
     background-color: #333;
     overflow: hidden;
     /* display: flex;
