--- a/css/style.css
+++ b/css/style.css
@@ -288,14 +288,14 @@ footer{
     --p2: calc( -200% - 2px);
 
 
-    width: calc(300%);
+    /* width: calc(300%); */
+    width: 100%;
     height:100%;
     display: flex;
     flex-flow: row nowrap;
     position: relative;
 
 
-    transition: right 1s ease;
 }
 
 
@@ -303,14 +303,19 @@ footer{
 
 
 .screen{
-    width: calc(100% / 3);
+    width: 100%;
     height: 100%;
     background-size: cover;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
+    position: absolute;
+    left: 100%;
+
+    transition: left 1s;
 }
+
 
 .screen span{
     padding: 20px;
@@ -333,6 +338,7 @@ footer{
 
 .screen:nth-of-type(1){
     background-image: url('../images/boat.jpg');
+    left: 0px;
 }
 
 .screen:nth-of-type(2){
@@ -367,7 +373,7 @@ button{
     box-shadow: 0 0 1px 0px white;
     position: absolute;
     top:275px;
-    z-index: 1;
+    z-index: 10;
     transition: background-position .15s, opacity .25s;
     cursor: pointer;
 }
@@ -415,3 +421,11 @@ button:hover{
         display: none;
     }
   }
+
+
+
+@media only screen and (max-width: 650px) {
+    header > div{
+        display: none;
+    }
+}
