--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 :root{
     --blue:#0053ad;
-    --gray30:#303030;
+    /* --gray30:#303030; */
+    --gray30:#000;
     --gray25:#252525;
     --gray19:#191919;
     --graya:#aaa;
@@ -13,18 +14,45 @@
 }
 
 h2{
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', Helvetica, Arial, Verdana, sans-serif;
     font-size: 32px;
     font-weight: 400;
     color:var(--gray30);
-    margin: 0 0 10px 0;
+    margin: 0 0 20px 0;
+    position: relative;
+}
+
+/* line */
+
+h2::after{
+    content:'';
+    display: block;
+    width: 50px;
+    /* border: 3px solid rgba(132,132,132); */
+    height: 3px;
+    background: rgba(132,132,132);
+    position: relative;
+    top: 10px;
+    left: 0px;
+    z-index: 10;
+}
+
+h3{
+    font-family: 'Montserrat', Helvetica, Arial, Verdana, sans-serif;
+    font-size: 28px;
+    font-weight: 400;
+    color:var(--gray30);
+    margin: 0;
+    position: relative;
 }
 
 h4{
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     font-size: 18px;
-    margin: 0 0 10px 0;
+    margin: 0;
+    margin-top: 11px;
+    margin-bottom: 10px;
 }
 
 body {
@@ -41,7 +69,7 @@ main{
 
 header{
     display: flex;
-    padding:30px 65px;
+    padding: 55px 65px 15px 65px;
 }
 
 header > div{
@@ -109,6 +137,35 @@ header a:hover::after{
     padding:65px;
 }
 
+.info b{
+    /* height: 58px; */
+    padding-top: 35px;
+    margin-bottom: -5px;
+    display: block;
+}
+
+.info p {
+    margin-top:10px;
+    font-family: helvetica, arial, sans-serif;
+}
+
+.info h2{
+    position: relative;
+}
+
+.info h2::before{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 50px;
+    background-color: rgba(0, 0, 0, 0);
+    background-image: url(../images/icon.png);
+    background-position: center right;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 0;
+}
+
 
 
 #contact{
@@ -121,9 +178,13 @@ header a:hover::after{
     width: 50%;
 }
 
-#contact img {max-width: 250px;}
+#contact img {
+    margin-bottom: 40px;
+    max-width: 250px;
+}
 
 #contact h3{
+    margin-bottom: 37px;
     font-size: 23px;
     font-weight: 400;
     color:var(--graya);
@@ -132,7 +193,7 @@ header a:hover::after{
 
 footer{
     background-color: var(--gray25);
-    padding: 10px 65px;
+    padding: 10px 55px;
     font-size: 12px;
     font-weight: 700;
     color:var(--graya);
@@ -143,7 +204,7 @@ footer{
 
 #about{
     padding: 65px;
-
+    margin-bottom: 75px;
 }
 
 
@@ -154,8 +215,16 @@ footer{
     background-color: var(--grayf7);
     display: inline-block;
     max-width: calc(100% - (230px + 65px) );
+    padding-bottom: 18px;
 }
 
+
+#about p{
+    font-family: helvetica, arial, sans-serif;
+    font-size: 16px;
+    line-height: 28px;
+    margin:8px 0;
+}
 
 
 #about img{
@@ -413,8 +482,6 @@ button:hover{
     left:20px;
     transform: rotate(180deg);
 }
-
-
 
 
 
